# ONVIF_CGO

./: .gitignore  CMakeLists.txt  Makefile  README.md  cJSON.c  client.bak2.c  client.c  client.h  client_bak.c.  go.mod  main.go  onvif_cgo_client.c  onvif_cgo_client.h  tcp_server.c
soap/: DeviceBinding.nsmap  PTZBinding.nsmap  RemoteDiscoveryBinding.nsmap  onvif.h  soapClient.c  soapStub.h
soap_bak/: DeviceBinding.AddIPAddressFilter.req.xml  DeviceBinding.AddIPAddressFilter.res.xml  DeviceBinding.AddScopes.req.xml  DeviceBinding.AddScopes.res.xml  DeviceBinding.CreateCertificate.req.xml  DeviceBinding.CreateCertificate.res.xml  DeviceBinding.CreateDot1XConfiguration.req.xml  DeviceBinding.CreateDot1XConfiguration.res.xml  DeviceBinding.CreateStorageConfiguration.req.xml  DeviceBinding.CreateStorageConfiguration.res.xml  DeviceBinding.CreateUsers.req.xml  DeviceBinding.CreateUsers.res.xml  DeviceBinding.DeleteCertificates.req.xml  DeviceBinding.DeleteCertificates.res.xml  DeviceBinding.DeleteDot1XConfiguration.req.xml  DeviceBinding.DeleteDot1XConfiguration.res.xml  DeviceBinding.DeleteGeoLocation.req.xml  DeviceBinding.DeleteGeoLocation.res.xml  DeviceBinding.DeleteStorageConfiguration.req.xml  DeviceBinding.DeleteStorageConfiguration.res.xml  DeviceBinding.DeleteUsers.req.xml  DeviceBinding.DeleteUsers.res.xml  DeviceBinding.GetAccessPolicy.req.xml  DeviceBinding.GetAccessPolicy.res.xml  DeviceBinding.GetAuthFailureWarningConfiguration.req.xml  DeviceBinding.GetAuthFailureWarningConfiguration.res.xml  DeviceBinding.GetAuthFailureWarningOptions.req.xml  DeviceBinding.GetAuthFailureWarningOptions.res.xml  DeviceBinding.GetCACertificates.req.xml  DeviceBinding.GetCACertificates.res.xml  DeviceBinding.GetCapabilities.req.xml  DeviceBinding.GetCapabilities.res.xml  DeviceBinding.GetCertificateInformation.req.xml  DeviceBinding.GetCertificateInformation.res.xml  DeviceBinding.GetCertificates.req.xml  DeviceBinding.GetCertificates.res.xml  DeviceBinding.GetCertificatesStatus.req.xml  DeviceBinding.GetCertificatesStatus.res.xml  DeviceBinding.GetClientCertificateMode.req.xml  DeviceBinding.GetClientCertificateMode.res.xml  (+167 more)
