#cmake_minimum_required(VERSION 3.0)
#project(onvif-cgo)
#
#aux_source_directory(./soap/ SRC_LIST)
#link_directories(~/)
##add_executable(gsoap-onvif-discover  ${SRC_LIST} client.c.)
#ADD_LIBRARY(c_onvif SHARED ${SRC_LIST} client.c)
#ADD_LIBRARY(c_onvif_static STATIC ${SRC_LIST} client.c)

#cmake_minimum_required(VERSION 3.0)
#project(onvif-cgo)
#
#set(CMAKE_C_FLAGS "-DWITH_DOM -DWITH_OPENSSL -DWITH_NONAMESPACES")
#aux_source_directory(./soap/ SRC_LIST)
#include_directories(./ /usr/include/ ./soap/custom)
#link_directories(~/ /usr/local/ /usr/lib/)
##add_executable(gsoap-onvif ${SRC_LIST} client.c client.h ./soap/custom)
##add_executable(gsoap-onvif ${SRC_LIST} ./soap/custom device.c)
##add_executable(discovery_onvif ${SRC_LIST} main.c ./soap/custom)
##target_link_libraries(gsoap-onvif -lpthread -ldl -lssl -lcrypto)
##ADD_LIBRARY(c_onvif SHARED ${SRC_LIST} client.c)
#ADD_LIBRARY(c_onvif_static STATIC ${SRC_LIST} client.c client.h ./soap/custom)

cmake_minimum_required(VERSION 3.0)
project(onvif-cgo)

set(CMAKE_C_FLAGS "-DWITH_DOM -DWITH_OPENSSL -DWITH_NONAMESPACES")
aux_source_directory(./soap/ SRC_LIST)
include_directories(./ /usr/include/ ./soap/custom)
link_directories(~/ /usr/local/ /usr/lib/)
#add_executable(gsoap-onvif ${SRC_LIST} client.c client.h ./soap/custom)
#add_executable(gsoap-onvif ${SRC_LIST} ./soap/custom device.c)
#add_executable(discovery_onvif ${SRC_LIST} main.c ./soap/custom)
#target_link_libraries(gsoap-onvif -lpthread -ldl -lssl -lcrypto)
#ADD_LIBRARY(c_onvif SHARED ${SRC_LIST} client.c)
ADD_LIBRARY(c_onvif_static STATIC ${SRC_LIST} client.c client.h ./soap/custom)

